Moved edit/zoom icons to beginning of label to assure that they are always visible (Fixes #163)

--- a/sigmah/src/main/java/org/sigmah/client/page/table/pivot.css
+++ b/sigmah/src/main/java/org/sigmah/client/page/table/pivot.css
@@ -12,7 +12,6 @@
 	gwt-image: 'pencil';
 	cursor: pointer;
 	vertical-align: -3px;
-	margin-left: 2px;
 }
 
 @sprite .swapIcon {
